# ###########################################
#
# Build
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/Loupedeck"]


# ###########################################
#
# Project
#
[project]
name = "loupedeck"

authors = [
  { name="Pierre M.", email="pierre@devleaks.be" }
]

description = "Python wrapper around Loupedeck Live deck device"

readme = "README.md"

license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "pyserial==3.5",
    "pillow>=9.5.0"
]

dynamic = [
    "version"
]

[project.urls]
Homepage = "https://github.com/devleaks/python-loupedeck-live"
Documentation = "https://github.com/devleaks/python-loupedeck-live"
Issues = "https://github.com/devleaks/python-loupedeck-live/issues"
Source = "https://github.com/devleaks/python-loupedeck-live"

# ###########################################
#
# Edit
#
[tool.ruff]
line-length = 160
docstring-code-format = true
select = [
    "E",
    "F",
    "W",
]
ignore = []

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160

